# rna_tarefas_mestrado

./: .gitignore  pyproject.toml
data/: Trabalho5dados.xlsx
libs/: gradient_descendent.py  levenberg_marquadt.py  network.py
output/: tarefa2_results.xlsx  tarefa3_results.xlsx
src/: tarefa1.ipynb  tarefa2.ipynb  tarefa3.ipynb  tarefa4.ipynb  tarefa5.ipynb  tarefa5.py  tarefa6.ipynb
utils/: activations_fn.py  loss_fn_tarefa2.py  loss_fn_tarefa4.py  loss_fn_tarefa5.py  metrics.py  normalize.py  plot_tarefa1.py
utils/plots/: plots_tarefa2.py  plots_tarefa3.py  plots_tarefa4.py  plots_tarefa5.py
