[project]
name = "rna-tarefas-mestrado"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "jax>=0.7.1",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]
